[package]
authors = ["Tobychev <tobychev@live.com>"]
name = "personregister"
version = "0.1.0"

[dependencies]
dotenv = "^0.10.1"
r2d2 = "^0.7"
rocket = "^0.3.3"
rocket_codegen = "^0.3.3"
serde = "^1.0.27"
serde_derive = "^1.0.27"
serde_json = "^1.0.9"

[dependencies.diesel]
features = ["mysql"]
version = "^0.16.0"

[dependencies.diesel_codegen]
features = ["mysql"]
version = "^0.16.0"

[dependencies.r2d2-diesel]
version = "^0.16"

[dependencies.rocket_contrib]
default-features = false
features = ["json", "uuid"]
version = "0.3.3"

[dependencies.uuid]
features = ["serde","v4"]
version = "^0.5.1"
